(fix): reduces letter spacing on blog content

--- a/src/app/modules/blog/view.component.scss
+++ b/src/app/modules/blog/view.component.scss
@@ -43,7 +43,7 @@
   .m-ionic-blog--body{
     padding: 16px;
     font-size: 16px;
-    letter-spacing: 1px;
+    letter-spacing: 0.3px;
     line-height: 22px;
   }
 }
